# RED_EMU

./: .gitignore  README.md  data_generator.py  dataset.py  pyproject.toml
.github/workflows/: CI.yml
dataset/: training_data.npy  training_labels
evaluation_metrics/: FSD.py  testing_image_generation.py
make_data/: make_lightcones.py
src/RED_EMU/: ANN.py  BNN.py  __init__.py  data_generator.py
src/RED_EMU.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/RED_EMU/make_data/: __init__.py  data_generator.py  make_lightcones.py  sampler.py
src/RED_EMU/make_data/dataset/: 1test_data.npy  training_data.npy  training_labels.csv
test_RED_EMU/: test_data_generator.py
